package co.edu.udistrital.pdf.services;

import java.io.ByteArrayInputStream;

public interface iCitaService {

    ByteArrayInputStream generatePdf();

}
